# tutorial-sessions

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: compliance.yml
exercises/: tut_00.ipynb
tut_00_intro_to_casadi/: c00_intro.ipynb  c01_goal_reaching_trajopt.ipynb  c02_goal_reaching_mpc.ipynb  c03_obstacle_avoidance_hard_constraint.ipynb  c04_obstacle_avoidance_soft_constraint.ipynb
tut_01_CEM/: Cross_Entropy_Method.ipynb
